feat: acho que ta pronto
