# application-service/src/infrastructure/http/routes/routes.js
@@ -9,7 +9,6 @@ import NotFound from "./helper/404.js";
 
 import { verify } from "../../../presentation/controllers/authController.js";
 
-import Group from './group/groupRouter.js';
 import userRouter from './user/userRouter.js';
 import registerRouter from './user/registerRouter.js';
 import AuthRouter from './auth/authRouter.js';
@@ -22,11 +21,11 @@ routes.use(handler);
 routes.use(order);
 
 routes.use('/login', AuthRouter);
-routes.use('/api/groups', grouprouter);
 routes.use('/register', registerRouter);
 
 routes.use('/api/users', verify, userRouter);
 routes.use('/api/vehicles', verify, vehicleRouter);
+routes.use('/api/groups',  grouprouter);
 
 routes.use(InternalServerError);
 routes.use(NotFound);
